Fix typed data alignment

--- a/app/App/Panel/Main/Account/Requests/style/index.styl
+++ b/app/App/Panel/Main/Account/Requests/style/index.styl
@@ -754,10 +754,10 @@
 
   .signTypedData
     position absolute
-    top 85px
+    top 78px
     left 0
     right 0
-    bottom 46px
+    bottom 55px
     margin 0
     font-size 20px
     font-weight 300
